--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,5 +1,12 @@
-/* :root {
+ @import "tailwindcss";
+
+ 
+
+ :root {
+  
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  
+
   line-height: 1.5;
   font-weight: 400;
 
@@ -21,6 +28,7 @@ a {
 a:hover {
   color: #535bf2;
 }
+
 
 body {
   margin: 0;
@@ -65,13 +73,5 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+} 
 
-/* src/styles/index.css */
-body {
-  font-family: Arial, sans-serif;
-  margin: 20px;
-}
-nav a {
-  margin-right: 10px;
-}
